# terraform-azure-webapp

./: README.md  compose.yml
app/: Dockerfile  app.py  database.py  entrypoint.sh  main.py  models.py  pyproject.toml
app/tests/: conftest.py  test_count.py
database/initdb.d/: ddl.sql
terraform/: .gitignore  01_app.tf  02_database.tf  main.tf  provider.tf  variables.tf
